# docker/hospital-sdk/node-server/controllers/doctors.js
@@ -57,6 +57,7 @@ const getDoctorById = async (req, res) => {
     networkObj,
     hospitalId
   );
+  console.log(response, hospitalId, doctorId);
   // Filter the result using the doctorId
   response.error
     ? res.status(500).send(response.error)
